long stocked books

--- a/AppDev2ndCW/Views/Sales/List.cshtml
+++ b/AppDev2ndCW/Views/Sales/List.cshtml
@@ -51,7 +51,7 @@
                                         <td>
                                             <ul class="list-inline m-0">
                                                 <li class="list-inline-item">
-                                                    <a href="@Url.ActionLink("SaleItems", "Sales")" class="btn btn-warning btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="View Sale Items"><i class="fa fa-table"></i></a>
+                                                    <a href="@Url.ActionLink("SaleItems", "Sales" ,new { item.Id})" class="btn btn-warning btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="View Sale Items"><i class="fa fa-table"></i></a>
                                                 </li>
                                                 <li class="list-inline-item">
                                                     <button class="btn btn-danger btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Delete"><i class="fa fa-trash"></i></button>
