--- a/AppDev2ndCW/Views/Users/LongStocked.cshtml
+++ b/AppDev2ndCW/Views/Users/LongStocked.cshtml
@@ -104,7 +104,7 @@
         </div>
 
         <div class="text-center">
-            <button class="btn btn-primary px-4">Remove all Books from Stock <i class="fas fa-minus-square ml-2"></i></button>
+            <a href="@Url.Action("DeleteAllBooks","Users")" class="btn btn-primary px-4">Remove all Books from Stock <i class="fas fa-minus-square ml-2"></i></a>
         </div>
 
     </div>
