--- a/AppDev2ndCW/Views/Books/BooksInventory.cshtml
+++ b/AppDev2ndCW/Views/Books/BooksInventory.cshtml
@@ -63,21 +63,21 @@ else if (ViewBag.isdelete)
                                     <i class="fa fa-book text-muted"></i>
                                 </span>
                             </div>
-                            <select id="customer" name="customer" class="form-control custom-select bg-white border-left-0 border-md">
-                                <option value="">Choose a Category</option>
-                                @foreach (var category in ViewBag.bookList)
+                            <select id="book" name="book_id" class="form-control custom-select bg-white border-left-0 border-md" required>
+                                <option value="">Choose a Book</option>
+                                @foreach (var book in ViewBag.bookList)
                                 {
-                                    <option value="@category.Id"> @category.Book_name</option>
+                                    <option value="@book.Id"> @book.Book_name</option>
                                 }
                             </select>
                         </div>
 
                         <div class="card-columns">
                             <div class="text-center">
-                                <button class="btn btn-primary">View Item Avilability <i class="fas fa-check ml-2"></i></button>
+                                <button name="button" value="availability" class="btn btn-primary">View Item Avilability <i class="fas fa-check ml-2"></i></button>
                             </div>
                             <div class="text-center">
-                                <button class="btn btn-primary">View Stock Amount <i class="fas fa-check ml-2"></i></button>
+                                <button class="btn btn-primary" name="button" value="stock">View Stock Amount <i class="fas fa-check ml-2"></i></button>
                             </div>
                         </div>
                         
