--- a/AppDev2ndCW/Views/Books/Authors.cshtml
+++ b/AppDev2ndCW/Views/Books/Authors.cshtml
@@ -35,7 +35,7 @@ else if (ViewBag.isdeleteaut)
                 </div>
             </div>
 
-            <form action="" method="post">
+            <form action="/Books/AddAuthor" method="post">
                 <!-- Author Input -->
                 <div class="form-group mb-4">
                     <div class="input-group p-0 shadow-sm">
